--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2922,6 +2922,7 @@ input, select, textarea {
 		background-image: url("../../images/bg.jpg");
 		background-position: top left,						center center,					center center;
 		background-size: auto,							cover,							cover;
+		height:950px;
 		overflow: hidden;
 		position: relative;
 		text-align: center;
